# vpnparser

./: .env.example  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Makefile  README.md  SECURITY.md  facts_history.json  pyproject.toml  requirements.txt
.github/: xray.sha256
.github/workflows/: ci.yml  update.yml
config/: settings.yaml  sources.json
docs/: OPERATIONS.md
output/: health-history.json  run-summary.json  subscription-blacklist.txt  subscription-mix.txt  subscription-whitelist.txt  subscription.txt
output/locations/: subscription-CA.txt  subscription-DE.txt  subscription-FI.txt  subscription-FR.txt  subscription-GB.txt  subscription-JP.txt  subscription-NL.txt  subscription-RU.txt  subscription-US.txt
src/: env.py  main.py  repo_info.py
src/aggregator/: merger.py  output.py
src/notify/: telegram.py
src/parsers/: __init__.py  anytls.py  base.py  hysteria2.py  llm_fallback.py  shadowsocks.py  shadowtls.py  subscription.py  trojan.py  tuic.py  vless.py  vmess.py
src/publisher/: github.py
src/scheduler/: context.py  health_history.py  runner.py  settings.py
src/scheduler/stages/: __init__.py  aggregate.py  base.py  fetch.py  filter.py  liveness.py  parse.py  publish.py  quality.py  write.py
src/sources/: github.py  list_types.py  manager.py
src/utils/: paths.py
src/validators/: country_filter.py  geoip.py  proxy_health.py  proxy_pool.py  tcp_check.py  tls_check.py  xray_probe.py
tests/: test_aggregator_output.py  test_country_filter.py  test_edge_cases_debug.py  test_geoip.py  test_github_debug_repro.py  test_health_history.py  test_list_types.py  test_liveness.py  test_llm_fallback.py  test_main.py  test_main_cli.py  test_merger.py  test_parsers.py  test_paths.py  test_pipeline_helpers.py  test_proxy_health.py  test_proxy_pool.py  test_publish_stage.py  test_publisher_github.py  test_quality.py  test_quality_health_regression.py  test_runner_coverage.py  test_runner_debug_repro.py  test_settings.py  test_sources_github.py  test_sources_manager.py  test_stage_aggregate.py  test_stage_base.py  test_stage_filter.py  test_stage_parse.py  test_tcp_check.py  test_telegram.py  test_tls_check.py  test_write.py  test_xray_probe.py
