[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vpnparser"
version = "0.1.0"
description = "Fetch, parse, validate, and publish VPN proxy configurations."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Moonishe" },
]
keywords = ["vpn", "v2ray", "xray", "proxy", "subscription"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: System :: Networking",
]

dependencies = [
    "httpx>=0.27",
    "aiodns>=3.2",
    "PyYAML>=6.0",
    "python-socks[asyncio]>=2.5",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "bandit[toml]>=1.7",
    "pip-audit>=2.7",
]

[project.urls]
Homepage = "https://github.com/Moonishe/vpnparser"
Repository = "https://github.com/Moonishe/vpnparser"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "S",   # flake8-bandit (security)
    "ASYNC", # flake8-async
    "PL",  # pylint
    "TRY", # tryceratops
    "RUF", # ruff-specific
]
ignore = [
    "S101",    # assert used in tests
    "S603",    # subprocess calls in validators (reviewed)
    "S607",    # partial executable paths in subprocess
    "PLR2004", # magic value comparisons — many in data comparisons
    "PLC0415", # lazy imports — intentional for circular deps / dynamic loading
    "PLR0911", # too many returns — will refactor later
    "PLR0912", # too many branches — will refactor later
    "PLR0913", # too many arguments — will refactor later
    "PLR0915", # too many statements — will refactor later
    "TRY300",  # try body too long — readability preference
    "ASYNC109",# async timeout param — intentional pattern
    "RUF059",  # unpacked variable never used
    "S310",    # URL security — reviewed safe
    "S311",    # random — not security-sensitive
    "S104",    # bind to all interfaces — intentional for service
    "PLW0108", # unnecessary lambda — readability preference
    "PLW2901", # loop variable overwritten — intentional pattern
    "RUF002",  # docstring unicode — data content
]

[tool.ruff.lint.per-file-ignores]
"src/notify/telegram.py" = [
    "RUF001",   # confusing unicode — data content, not code
    "TRY003",   # exception messages
]
"src/validators/xray_probe.py" = [
    "TRY003",   # exception messages
]
"src/scheduler/stages/liveness.py" = [
    "RUF001",   # confusing unicode
]
"src/publisher/github.py" = [
    "TRY003",   # exception messages
]
"src/sources/github.py" = [
    "TRY003",   # exception messages
]
"src/utils/paths.py" = [
    "TRY003",   # exception messages
]
"src/validators/country_filter.py" = [
    "TRY003",   # exception messages
]
"src/validators/geoip.py" = [
    "TRY003",   # exception messages
]
"tests/*" = [
    "S105",     # hardcoded password string — test fixtures use fake secrets
    "S106",     # hardcoded password func arg — test fixtures use fake secrets
    "S108",     # hardcoded temp file — test paths are ephemeral
    "S306",     # mktemp usage — tests use tempfile
    "TRY003",   # exception messages — not useful in test helpers
    "F841",     # unused variable — sometimes intentional in test setup
    "ASYNC240", # blocking path in async function — test fixtures
    "E501",     # line too long — docstrings and test data
    "N806",     # non-lowercase variable — mock class names
    "SIM117",   # nested with — readability preference in tests
    "C401",     # unnecessary generator — test style preference
    "C408",     # unnecessary dict() — test style preference
    "PLR1714",  # repeated equality — test clarity preference
    "RUF012",   # mutable class default — test configs
    "RUF043",   # ambiguous regex pattern — test patterns
    "UP041",    # replace aliased error — compatibility preference
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
exclude = [
    "tests/",
]

[[tool.mypy.overrides]]
module = "src.*"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "python_socks.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-q",
    "-p", "no:cacheprovider",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-fail-under=60",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.pip-audit]
desc = { format = "columnar" }
